stylesheet.css
body {
  background-color: black;
  font-family: sans-serif;
  line-height: 160%;
}

body,
a {
  color: #eaeaea;
}

h1,
h2 {
  color: white;
  font-weight: 200;
}

main {
  background-color: #141414;
}

.header {
  background-image: url(header.jpg);
  background-size: cover;
}

.section {
  padding-top: 2rem;
  padding-bottom: 2rem;
}

.footer {
  font-size: 80%;
  color: #808080;
  text-align: center;
}

.wrap {
  max-width: 40rem;
  margin: 0 auto;
}

.gutter {
  margin: 0 0.5rem;
}

.lead {
  font-size: 1.25rem;
  line-height: 2rem;
  font-weight: 300;
}

@media (min-width: 40rem) {
  .header {
    padding-top: 10rem;
    padding-bottom: 10rem;
  }
}

